feat: crud escola
