# src/routes/routes.ts
@@ -2,8 +2,21 @@ import {
   createUserController,
   loginController,
 } from '../controller/Login.Controller';
+import {
+  deleteSchoolbyIdController,
+  getAllSchoolController,
+  getSchoolByIdController,
+  postNewSchoolController,
+  updateSchoolbyIdController,
+} from '../controller/School.Controller';
 
 export const controllers = {
   loginController,
   createUserController,
+
+  postNewSchoolController,
+  getAllSchoolController,
+  getSchoolByIdController,
+  updateSchoolbyIdController,
+  deleteSchoolbyIdController,
 };
